TParser.java
// $ANTLR 3.5.2 T.g 2021-04-10 18:45:42

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

@SuppressWarnings("all")
public class TParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "Comments", "Digit", "ID", "Integer", 
		"String", "WS", "'('", "')'", "'+'", "','", "':'", "'='", "'['", "']'", 
		"'print'", "'tuturkeykey'"
	};
	public static final int EOF=-1;
	public static final int T__10=10;
	public static final int T__11=11;
	public static final int T__12=12;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int Comments=4;
	public static final int Digit=5;
	public static final int ID=6;
	public static final int Integer=7;
	public static final int String=8;
	public static final int WS=9;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public TParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public TParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return TParser.tokenNames; }
	@Override public String getGrammarFileName() { return "T.g"; }


	        ActionRoutines h = new ActionRoutines();
	 


	// $ANTLR start "prog"
	// T.g:12:1: prog returns [String s] : ( statement )+ ;
	public final String prog() throws RecognitionException {
		String s = null;


		try {
			// T.g:12:26: ( ( statement )+ )
			// T.g:12:28: ( statement )+
			{
			// T.g:12:28: ( statement )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==ID||LA1_0==10||(LA1_0 >= 18 && LA1_0 <= 19)) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// T.g:12:29: statement
					{
					pushFollow(FOLLOW_statement_in_prog65);
					statement();
					state._fsp--;
					if (state.failed) return s;
					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					if (state.backtracking>0) {state.failed=true; return s;}
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return s;
	}
	// $ANTLR end "prog"



	// $ANTLR start "statement"
	// T.g:14:1: statement : ( assignment | print | unpacking | indexing | slicing | addInt1 | addStr1 | tupAssg | addID1 | printHashmap );
	public final void statement() throws RecognitionException {
		try {
			// T.g:14:11: ( assignment | print | unpacking | indexing | slicing | addInt1 | addStr1 | tupAssg | addID1 | printHashmap )
			int alt2=10;
			switch ( input.LA(1) ) {
			case ID:
				{
				int LA2_1 = input.LA(2);
				if ( (LA2_1==15) ) {
					switch ( input.LA(3) ) {
					case Integer:
						{
						int LA2_6 = input.LA(4);
						if ( (LA2_6==EOF||LA2_6==ID||LA2_6==10||(LA2_6 >= 18 && LA2_6 <= 19)) ) {
							alt2=1;
						}
						else if ( (LA2_6==12) ) {
							alt2=6;
						}

						else {
							if (state.backtracking>0) {state.failed=true; return;}
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 2, 6, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

						}
						break;
					case String:
						{
						int LA2_7 = input.LA(4);
						if ( (LA2_7==EOF||LA2_7==ID||LA2_7==10||(LA2_7 >= 18 && LA2_7 <= 19)) ) {
							alt2=1;
						}
						else if ( (LA2_7==12) ) {
							alt2=7;
						}

						else {
							if (state.backtracking>0) {state.failed=true; return;}
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 2, 7, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}

						}
						break;
					case ID:
						{
						switch ( input.LA(4) ) {
						case 16:
							{
							int LA2_13 = input.LA(5);
							if ( (LA2_13==Integer) ) {
								int LA2_15 = input.LA(6);
								if ( (LA2_15==17) ) {
									alt2=4;
								}
								else if ( (LA2_15==14) ) {
									alt2=5;
								}

								else {
									if (state.backtracking>0) {state.failed=true; return;}
									int nvaeMark = input.mark();
									try {
										for (int nvaeConsume = 0; nvaeConsume < 6 - 1; nvaeConsume++) {
											input.consume();
										}
										NoViableAltException nvae =
											new NoViableAltException("", 2, 15, input);
										throw nvae;
									} finally {
										input.rewind(nvaeMark);
									}
								}

							}
							else if ( (LA2_13==14) ) {
								alt2=5;
							}

							else {
								if (state.backtracking>0) {state.failed=true; return;}
								int nvaeMark = input.mark();
								try {
									for (int nvaeConsume = 0; nvaeConsume < 5 - 1; nvaeConsume++) {
										input.consume();
									}
									NoViableAltException nvae =
										new NoViableAltException("", 2, 13, input);
									throw nvae;
								} finally {
									input.rewind(nvaeMark);
								}
							}

							}
							break;
						case EOF:
						case ID:
						case 10:
						case 18:
						case 19:
							{
							alt2=1;
							}
							break;
						case 12:
							{
							alt2=9;
							}
							break;
						default:
							if (state.backtracking>0) {state.failed=true; return;}
							int nvaeMark = input.mark();
							try {
								for (int nvaeConsume = 0; nvaeConsume < 4 - 1; nvaeConsume++) {
									input.consume();
								}
								NoViableAltException nvae =
									new NoViableAltException("", 2, 8, input);
								throw nvae;
							} finally {
								input.rewind(nvaeMark);
							}
						}
						}
						break;
					case 10:
						{
						alt2=8;
						}
						break;
					default:
						if (state.backtracking>0) {state.failed=true; return;}
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 2, 5, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}
				}

				else {
					if (state.backtracking>0) {state.failed=true; return;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 2, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

				}
				break;
			case 18:
				{
				alt2=2;
				}
				break;
			case 10:
				{
				alt2=3;
				}
				break;
			case 19:
				{
				alt2=10;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return;}
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}
			switch (alt2) {
				case 1 :
					// T.g:14:19: assignment
					{
					pushFollow(FOLLOW_assignment_in_statement82);
					assignment();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 2 :
					// T.g:15:19: print
					{
					pushFollow(FOLLOW_print_in_statement102);
					print();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 3 :
					// T.g:16:19: unpacking
					{
					pushFollow(FOLLOW_unpacking_in_statement122);
					unpacking();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 4 :
					// T.g:17:19: indexing
					{
					pushFollow(FOLLOW_indexing_in_statement142);
					indexing();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 5 :
					// T.g:18:19: slicing
					{
					pushFollow(FOLLOW_slicing_in_statement162);
					slicing();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 6 :
					// T.g:19:19: addInt1
					{
					pushFollow(FOLLOW_addInt1_in_statement184);
					addInt1();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 7 :
					// T.g:20:19: addStr1
					{
					pushFollow(FOLLOW_addStr1_in_statement205);
					addStr1();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 8 :
					// T.g:21:19: tupAssg
					{
					pushFollow(FOLLOW_tupAssg_in_statement225);
					tupAssg();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 9 :
					// T.g:22:19: addID1
					{
					pushFollow(FOLLOW_addID1_in_statement245);
					addID1();
					state._fsp--;
					if (state.failed) return;
					}
					break;
				case 10 :
					// T.g:23:19: printHashmap
					{
					pushFollow(FOLLOW_printHashmap_in_statement265);
					printHashmap();
					state._fsp--;
					if (state.failed) return;
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "statement"


	public static class tuple_return extends ParserRuleReturnScope {
		public String s;
	};


	// $ANTLR start "tuple"
	// T.g:27:1: tuple returns [String s] : '(' value tail ')' ;
	public final TParser.tuple_return tuple() throws RecognitionException {
		TParser.tuple_return retval = new TParser.tuple_return();
		retval.start = input.LT(1);

		ParserRuleReturnScope value1 =null;
		ParserRuleReturnScope tail2 =null;

		try {
			// T.g:27:26: ( '(' value tail ')' )
			// T.g:27:28: '(' value tail ')'
			{
			match(input,10,FOLLOW_10_in_tuple303); if (state.failed) return retval;
			pushFollow(FOLLOW_value_in_tuple305);
			value1=value();
			state._fsp--;
			if (state.failed) return retval;
			pushFollow(FOLLOW_tail_in_tuple307);
			tail2=tail();
			state._fsp--;
			if (state.failed) return retval;
			match(input,11,FOLLOW_11_in_tuple309); if (state.failed) return retval;
			if ( state.backtracking==0 ) {retval.s = (value1!=null?input.toString(value1.start,value1.stop):null) + (tail2!=null?input.toString(tail2.start,tail2.stop):null);}
			}

			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "tuple"


	public static class tail_return extends ParserRuleReturnScope {
		public String s;
	};


	// $ANTLR start "tail"
	// T.g:30:1: tail returns [String s] : ( ',' value tail |);
	public final TParser.tail_return tail() throws RecognitionException {
		TParser.tail_return retval = new TParser.tail_return();
		retval.start = input.LT(1);

		try {
			// T.g:30:25: ( ',' value tail |)
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==13) ) {
				alt3=1;
			}
			else if ( (LA3_0==EOF||LA3_0==11) ) {
				alt3=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}

			switch (alt3) {
				case 1 :
					// T.g:30:27: ',' value tail
					{
					match(input,13,FOLLOW_13_in_tail364); if (state.failed) return retval;
					pushFollow(FOLLOW_value_in_tail366);
					value();
					state._fsp--;
					if (state.failed) return retval;
					pushFollow(FOLLOW_tail_in_tail368);
					tail();
					state._fsp--;
					if (state.failed) return retval;
					}
					break;
				case 2 :
					// T.g:30:44: 
					{
					}
					break;

			}
			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "tail"



	// $ANTLR start "tupAssg"
	// T.g:32:1: tupAssg : ID '=' tuple i1= addTup ;
	public final void tupAssg() throws RecognitionException {
		Token ID3=null;
		String i1 =null;
		ParserRuleReturnScope tuple4 =null;

		try {
			// T.g:32:9: ( ID '=' tuple i1= addTup )
			// T.g:32:11: ID '=' tuple i1= addTup
			{
			ID3=(Token)match(input,ID,FOLLOW_ID_in_tupAssg389); if (state.failed) return;
			match(input,15,FOLLOW_15_in_tupAssg391); if (state.failed) return;
			pushFollow(FOLLOW_tuple_in_tupAssg393);
			tuple4=tuple();
			state._fsp--;
			if (state.failed) return;
			pushFollow(FOLLOW_addTup_in_tupAssg397);
			i1=addTup();
			state._fsp--;
			if (state.failed) return;
			if ( state.backtracking==0 ) {h.initMapTup((ID3!=null?ID3.getText():null),h.addTuple((tuple4!=null?input.toString(tuple4.start,tuple4.stop):null),i1));}
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "tupAssg"



	// $ANTLR start "addTup"
	// T.g:34:1: addTup returns [String s] : ( ( '+' tuple i2= addTup ) |);
	public final String addTup() throws RecognitionException {
		String s = null;


		String i2 =null;
		ParserRuleReturnScope tuple5 =null;

		try {
			// T.g:34:27: ( ( '+' tuple i2= addTup ) |)
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==12) ) {
				alt4=1;
			}
			else if ( (LA4_0==EOF||LA4_0==ID||LA4_0==10||(LA4_0 >= 18 && LA4_0 <= 19)) ) {
				alt4=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return s;}
				NoViableAltException nvae =
					new NoViableAltException("", 4, 0, input);
				throw nvae;
			}

			switch (alt4) {
				case 1 :
					// T.g:34:29: ( '+' tuple i2= addTup )
					{
					// T.g:34:29: ( '+' tuple i2= addTup )
					// T.g:34:30: '+' tuple i2= addTup
					{
					match(input,12,FOLLOW_12_in_addTup412); if (state.failed) return s;
					pushFollow(FOLLOW_tuple_in_addTup414);
					tuple5=tuple();
					state._fsp--;
					if (state.failed) return s;
					pushFollow(FOLLOW_addTup_in_addTup418);
					i2=addTup();
					state._fsp--;
					if (state.failed) return s;
					}

					if ( state.backtracking==0 ) {s = s + h.addTuple((tuple5!=null?input.toString(tuple5.start,tuple5.stop):null),i2);}
					}
					break;
				case 2 :
					// T.g:34:96: 
					{
					if ( state.backtracking==0 ) {s ="";}
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return s;
	}
	// $ANTLR end "addTup"


	public static class value_return extends ParserRuleReturnScope {
		public String s;
	};


	// $ANTLR start "value"
	// T.g:36:1: value returns [String s] : ( Integer | String | tuple | ID |);
	public final TParser.value_return value() throws RecognitionException {
		TParser.value_return retval = new TParser.value_return();
		retval.start = input.LT(1);

		Token Integer6=null;
		Token String7=null;
		Token ID9=null;
		ParserRuleReturnScope tuple8 =null;

		try {
			// T.g:36:26: ( Integer | String | tuple | ID |)
			int alt5=5;
			switch ( input.LA(1) ) {
			case Integer:
				{
				alt5=1;
				}
				break;
			case String:
				{
				alt5=2;
				}
				break;
			case 10:
				{
				alt5=3;
				}
				break;
			case ID:
				{
				alt5=4;
				}
				break;
			case EOF:
			case 11:
			case 13:
				{
				alt5=5;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}
			switch (alt5) {
				case 1 :
					// T.g:36:33: Integer
					{
					Integer6=(Token)match(input,Integer,FOLLOW_Integer_in_value442); if (state.failed) return retval;
					if ( state.backtracking==0 ) {retval.s = (Integer6!=null?Integer6.getText():null);}
					}
					break;
				case 2 :
					// T.g:37:35: String
					{
					String7=(Token)match(input,String,FOLLOW_String_in_value487); if (state.failed) return retval;
					if ( state.backtracking==0 ) {retval.s = (String7!=null?String7.getText():null);}
					}
					break;
				case 3 :
					// T.g:38:35: tuple
					{
					pushFollow(FOLLOW_tuple_in_value532);
					tuple8=tuple();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) {retval.s = (tuple8!=null?input.toString(tuple8.start,tuple8.stop):null);}
					}
					break;
				case 4 :
					// T.g:39:35: ID
					{
					ID9=(Token)match(input,ID,FOLLOW_ID_in_value578); if (state.failed) return retval;
					if ( state.backtracking==0 ) {retval.s = (ID9!=null?ID9.getText():null);}
					}
					break;
				case 5 :
					// T.g:41:33: 
					{
					}
					break;

			}
			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "value"


	public static class idTuple_return extends ParserRuleReturnScope {
		public String s;
	};


	// $ANTLR start "idTuple"
	// T.g:43:1: idTuple returns [String s] : '(' ID idTail ')' ;
	public final TParser.idTuple_return idTuple() throws RecognitionException {
		TParser.idTuple_return retval = new TParser.idTuple_return();
		retval.start = input.LT(1);

		Token ID10=null;
		ParserRuleReturnScope idTail11 =null;

		try {
			// T.g:43:28: ( '(' ID idTail ')' )
			// T.g:43:30: '(' ID idTail ')'
			{
			match(input,10,FOLLOW_10_in_idTuple670); if (state.failed) return retval;
			ID10=(Token)match(input,ID,FOLLOW_ID_in_idTuple672); if (state.failed) return retval;
			pushFollow(FOLLOW_idTail_in_idTuple674);
			idTail11=idTail();
			state._fsp--;
			if (state.failed) return retval;
			match(input,11,FOLLOW_11_in_idTuple676); if (state.failed) return retval;
			if ( state.backtracking==0 ) {retval.s = (ID10!=null?ID10.getText():null) + (idTail11!=null?input.toString(idTail11.start,idTail11.stop):null);}
			}

			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "idTuple"


	public static class idTail_return extends ParserRuleReturnScope {
		public String s;
	};


	// $ANTLR start "idTail"
	// T.g:46:1: idTail returns [String s] : ( ',' ID idTail |);
	public final TParser.idTail_return idTail() throws RecognitionException {
		TParser.idTail_return retval = new TParser.idTail_return();
		retval.start = input.LT(1);

		try {
			// T.g:46:27: ( ',' ID idTail |)
			int alt6=2;
			int LA6_0 = input.LA(1);
			if ( (LA6_0==13) ) {
				alt6=1;
			}
			else if ( (LA6_0==EOF||LA6_0==11) ) {
				alt6=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 6, 0, input);
				throw nvae;
			}

			switch (alt6) {
				case 1 :
					// T.g:46:29: ',' ID idTail
					{
					match(input,13,FOLLOW_13_in_idTail731); if (state.failed) return retval;
					match(input,ID,FOLLOW_ID_in_idTail733); if (state.failed) return retval;
					pushFollow(FOLLOW_idTail_in_idTail735);
					idTail();
					state._fsp--;
					if (state.failed) return retval;
					}
					break;
				case 2 :
					// T.g:46:45: 
					{
					}
					break;

			}
			retval.stop = input.LT(-1);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "idTail"



	// $ANTLR start "assignment"
	// T.g:48:1: assignment returns [String s] : (i1= ID '=' Integer |i2= ID '=' String |i4= ID '=' i5= ID );
	public final String assignment() throws RecognitionException {
		String s = null;


		Token i1=null;
		Token i2=null;
		Token i4=null;
		Token i5=null;
		Token Integer12=null;
		Token String13=null;

		try {
			// T.g:48:31: (i1= ID '=' Integer |i2= ID '=' String |i4= ID '=' i5= ID )
			int alt7=3;
			int LA7_0 = input.LA(1);
			if ( (LA7_0==ID) ) {
				int LA7_1 = input.LA(2);
				if ( (LA7_1==15) ) {
					switch ( input.LA(3) ) {
					case Integer:
						{
						alt7=1;
						}
						break;
					case String:
						{
						alt7=2;
						}
						break;
					case ID:
						{
						alt7=3;
						}
						break;
					default:
						if (state.backtracking>0) {state.failed=true; return s;}
						int nvaeMark = input.mark();
						try {
							for (int nvaeConsume = 0; nvaeConsume < 3 - 1; nvaeConsume++) {
								input.consume();
							}
							NoViableAltException nvae =
								new NoViableAltException("", 7, 2, input);
							throw nvae;
						} finally {
							input.rewind(nvaeMark);
						}
					}
				}

				else {
					if (state.backtracking>0) {state.failed=true; return s;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 7, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}

			}

			else {
				if (state.backtracking>0) {state.failed=true; return s;}
				NoViableAltException nvae =
					new NoViableAltException("", 7, 0, input);
				throw nvae;
			}

			switch (alt7) {
				case 1 :
					// T.g:48:35: i1= ID '=' Integer
					{
					i1=(Token)match(input,ID,FOLLOW_ID_in_assignment755); if (state.failed) return s;
					match(input,15,FOLLOW_15_in_assignment757); if (state.failed) return s;
					Integer12=(Token)match(input,Integer,FOLLOW_Integer_in_assignment759); if (state.failed) return s;
					if ( state.backtracking==0 ) {h.initMapInt((i1!=null?i1.getText():null), (Integer12!=null?Integer12.getText():null));}
					}
					break;
				case 2 :
					// T.g:49:35: i2= ID '=' String
					{
					i2=(Token)match(input,ID,FOLLOW_ID_in_assignment799); if (state.failed) return s;
					match(input,15,FOLLOW_15_in_assignment801); if (state.failed) return s;
					String13=(Token)match(input,String,FOLLOW_String_in_assignment803); if (state.failed) return s;
					if ( state.backtracking==0 ) {h.initMapStr((i2!=null?i2.getText():null), (String13!=null?String13.getText():null));}
					}
					break;
				case 3 :
					// T.g:50:35: i4= ID '=' i5= ID
					{
					i4=(Token)match(input,ID,FOLLOW_ID_in_assignment844); if (state.failed) return s;
					match(input,15,FOLLOW_15_in_assignment846); if (state.failed) return s;
					i5=(Token)match(input,ID,FOLLOW_ID_in_assignment850); if (state.failed) return s;
					if ( state.backtracking==0 ) {h.initMapID((i4!=null?i4.getText():null), (i5!=null?i5.getText():null));}
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return s;
	}
	// $ANTLR end "assignment"



	// $ANTLR start "print"
	// T.g:53:1: print returns [String s] : ( 'print' '(' ID ')' | 'print' '(' String ')' | 'print' '(' Integer ')' | 'print' '(' tuple ')' | 'print' '(' id2= ID '[' Integer ']' ')' | 'print' '(' ')' | 'print' '(' WS ')' | 'print' '(' (id3= tuple )+ addTup | 'print' '(' i1= ID '+' i2= addIDPrint ')' | 'print' '(' i1= Integer '+' addIntPrint ')' | 'print' '(' i1= String '+' addStrPrint ')' );
	public final String print() throws RecognitionException {
		String s = null;


		Token id2=null;
		Token i1=null;
		Token ID14=null;
		Token String15=null;
		Token Integer16=null;
		Token Integer18=null;
		ParserRuleReturnScope id3 =null;
		String i2 =null;
		ParserRuleReturnScope tuple17 =null;
		String addTup19 =null;
		String addIntPrint20 =null;
		String addStrPrint21 =null;

		try {
			// T.g:53:26: ( 'print' '(' ID ')' | 'print' '(' String ')' | 'print' '(' Integer ')' | 'print' '(' tuple ')' | 'print' '(' id2= ID '[' Integer ']' ')' | 'print' '(' ')' | 'print' '(' WS ')' | 'print' '(' (id3= tuple )+ addTup | 'print' '(' i1= ID '+' i2= addIDPrint ')' | 'print' '(' i1= Integer '+' addIntPrint ')' | 'print' '(' i1= String '+' addStrPrint ')' )
			int alt9=11;
			int LA9_0 = input.LA(1);
			if ( (LA9_0==18) ) {
				int LA9_1 = input.LA(2);
				if ( (synpred20_T()) ) {
					alt9=1;
				}
				else if ( (synpred21_T()) ) {
					alt9=2;
				}
				else if ( (synpred22_T()) ) {
					alt9=3;
				}
				else if ( (synpred23_T()) ) {
					alt9=4;
				}
				else if ( (synpred24_T()) ) {
					alt9=5;
				}
				else if ( (synpred25_T()) ) {
					alt9=6;
				}
				else if ( (synpred26_T()) ) {
					alt9=7;
				}
				else if ( (synpred28_T()) ) {
					alt9=8;
				}
				else if ( (synpred29_T()) ) {
					alt9=9;
				}
				else if ( (synpred30_T()) ) {
					alt9=10;
				}
				else if ( (true) ) {
					alt9=11;
				}

			}

			else {
				if (state.backtracking>0) {state.failed=true; return s;}
				NoViableAltException nvae =
					new NoViableAltException("", 9, 0, input);
				throw nvae;
			}

			switch (alt9) {
				case 1 :
					// T.g:53:28: 'print' '(' ID ')'
					{
					match(input,18,FOLLOW_18_in_print897); if (state.failed) return s;
					match(input,10,FOLLOW_10_in_print899); if (state.failed) return s;
					ID14=(Token)match(input,ID,FOLLOW_ID_in_print901); if (state.failed) return s;
					match(input,11,FOLLOW_11_in_print903); if (state.failed) return s;
					if ( state.backtracking==0 ) {h.printID((ID14!=null?ID14.getText():null));}
					}
					break;
				case 2 :
					// T.g:54:27: 'print' '(' String ')'
					{
					match(input,18,FOLLOW_18_in_print933); if (state.failed) return s;
					match(input,10,FOLLOW_10_in_print935); if (state.failed) return s;
					String15=(Token)match(input,String,FOLLOW_String_in_print937); if (state.failed) return s;
					match(input,11,FOLLOW_11_in_print939); if (state.failed) return s;
					if ( state.backtracking==0 ) {h.printString((String15!=null?String15.getText():null));}
					}
					break;
				case 3 :
					// T.g:55:27: 'print' '(' Integer ')'
					{
					match(input,18,FOLLOW_18_in_print969); if (state.failed) return s;
					match(input,10,FOLLOW_10_in_print971); if (state.failed) return s;
					Integer16=(Token)match(input,Integer,FOLLOW_Integer_in_print973); if (state.failed) return s;
					match(input,11,FOLLOW_11_in_print975); if (state.failed) return s;
					if ( state.backtracking==0 ) {System.out.println((Integer16!=null?Integer16.getText():null));}
					}
					break;
				case 4 :
					// T.g:56:27: 'print' '(' tuple ')'
					{
